--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 <body>
 
 
-    Zipcode <input type="text" name="zipcode"><br>
-    <input type="submit" value="Submit">
+    <input id="zip" type="text" name="zipcode"><br>
 
-
+    <button id="button" type="button">Click me !</button>
 
 </body>
 
