--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <title> Park Api </title>
 
@@ -18,12 +18,16 @@
 </head>
 
 <body>
+    Place:w
+    address:z
+    crossStreet:y
+    <div class="container">
 
+        <input id="zip" type="text" name="zipcode"><br>
 
-    <input id="zip" type="text" name="zipcode"><br>
+        <button id="button" type="button">Search</button>
 
-    <button id="button" type="button">Click me !</button>
-
+    </div>
 </body>
 
 </html>
