--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <input id="zip" type="text" name="zipcode"><br>
 
-        <button id="button" type="button">Search</button>
+        <button id="button" type="button">GO</button>
 
 
     </div>
