added park name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div 2 style="color:#0FF">
+    <div 2 style="color:#FFF">
 
         <div id="park-results" color="red">
 
@@ -89,7 +89,16 @@
                     </li>
 
                 </ul>
+<ul>
 
+                    <li>
+
+                        Park:
+                        <div id="name"></div>
+
+                    </li>
+
+                </ul>
 </body>
 
 </html>
