--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                                             <div>
 
-                                                <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC6rKKqP2muUpfaai3uth3ro_e97jcUYiQ
+                                                <iframe id= "map" width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyC6rKKqP2muUpfaai3uth3ro_e97jcUYiQ
                                                 &q=Space+Needle,Seattle+WA" allowfullscreen>
                                  </iframe>
 
